--- a/src/app/shared/components/multi-select-search/multi-select-search.component.html
+++ b/src/app/shared/components/multi-select-search/multi-select-search.component.html
@@ -1,9 +1,10 @@
 <div *ngIf="config?.list">
 
     <form *ngIf="form" [formGroup]="form">
-        <mat-form-field class="d-block border-bottom border-dark drp-inpt">
+        <mat-form-field class="display-block border-bottom border-dark drp-inpt">
             <mat-label>{{ config.title }}</mat-label>
-            <mat-select formControlName="selected" multiple (openedChange)="projectInput.focus()"
+            <mat-select formControlName="selected" multiple
+                (openedChange)="projectInput.focus(); this.form.get('searchInput').setValue('')"
                 [compareWith]="compareValues">
                 <div class="d-flex">
                     <input formControlName="searchInput" class="p-l-4" #projectInput matInput focused="'true'"
@@ -13,7 +14,8 @@
                     </button>
                 </div>
                 <mat-divider></mat-divider>
-                <mat-option *ngFor="let item of (filtered || config.list)" [value]="item">
+                <mat-option *ngFor="let item of (filtered || config.list)" [value]="item"
+                    (onSelectionChange)="getValueOnChangeOption($event)">
                     {{ item.name }}
                 </mat-option>
             </mat-select>
