--- a/src/app/shared/dialogs/add-edit-grn/grn-documents/grn-documents.component.html
+++ b/src/app/shared/dialogs/add-edit-grn/grn-documents/grn-documents.component.html
@@ -1,6 +1,6 @@
 <div class="row grn-docs">
   <div class="col-md-5 col-sm-6 col-xs-12 upload-documents-mat-header">
-    <span class="text-semi-bold width100Percent">
+    <span class="text-semi-bold width-100">
       <app-upload
         #uploadRef
         [documentListLength]="documentListLength"
