--- a/src/app/shared/dialogs/show-documents/show-documents.component.html
+++ b/src/app/shared/dialogs/show-documents/show-documents.component.html
@@ -27,7 +27,7 @@
 
         <ng-container *ngIf="documentList == null || (documentList && documentList.length == 0)">
           <div class="p-t-10 display-flex justify-content-center">
-            <img class="width40Percent" src="../../../../assets/images/docs.png" />
+            <img class="width-40" src="../../../../assets/images/docs.png" />
           </div>
           <div>
             <span class="p-t-10 p-b-10 display-flex justify-content-center text-align-justify">
