--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -81,7 +81,7 @@
               <mat-expansion-panel class="myPanel" [expanded]="true">
                 <mat-expansion-panel-header>
                   <mat-panel-title>
-                    <div class="row width100Percent">
+                    <div class="row width-100">
                       <div class="col-xs-8 col-md-8 p-t-10 p-b-10 font-size-vary-grn">
                         {{data.materialName}}
                         <div class="font-size-vary-grn color-brand">{{data.materialBrand}}</div>
@@ -94,10 +94,10 @@
                     </div>
                   </mat-panel-title>
                 </mat-expansion-panel-header>
-                <div class="row width100Percent">
+                <div class="row width-100">
                   <div class="col-xs-12 font-size-vary-grn p-t-10 p-l-15">Unit : {{data.materialUnit}}</div>
                 </div>
-                <div class="row width100Percent">
+                <div class="row width-100">
                   <div class="col-xs-6 font-size-vary-grn p-t-10 p-b-10 p-l-15">Awarded Quantity : {{data.materialQuantity}}</div>
                   <div class="col-xs-6 font-size-vary-grn text-align-right p-t-10 p-b-10">Delivered Quantity : {{data.deliveredQty}}</div>
                 </div>
