--- a/src/app/features/reports/ctc-report/ctc-report.component.html
+++ b/src/app/features/reports/ctc-report/ctc-report.component.html
@@ -11,7 +11,7 @@
         <div class="col-md-3 col-sm-5 col-xs-6 text-left showResponsiveReport">
           <mat-form-field class="border-select select-project-dropdown w-100">
             <mat-label>Select Project</mat-label>
-            <mat-select formControlName="selectedProject" multiple>
+            <mat-select formControlName="selectedProject" panelClass="selected-project-panel" multiple>
               <div class="search-project-div d-flex align-items-center">
                 <input
                   class="p-b-5"
