--- a/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
+++ b/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
@@ -10,7 +10,7 @@
         <div class="col-md-3 col-sm-4 col-xs-6 text-left select-projects showResponsiveReport p-l-0">
           <mat-form-field class="border-select select-project width-100 font-size-vary-grn">
             <mat-label>Select Project</mat-label>
-            <mat-select formControlName="selectedProject" multiple>
+            <mat-select formControlName="selectedProject" panelClass="selected-project-panel" multiple>
               <div class="display-flex">
                 <input
                   class="p-l-10 p-b-5"
