--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -14,6 +14,10 @@
   justify-content: flex-end;
 }
 
+.justify-content-flex-center {
+  justify-content: center;
+}
+
 .justify-content-flex-start {
   justify-content: flex-start;
 }
@@ -164,6 +168,10 @@ div.limited-character.universal {
 .no-border {
   border: 0 !important;
 }
+
+.noborder-bottom {
+  border-bottom: none !important;
+}
 /***************************************************************************************/
 
 /***********************************Input and Dropdown Related Padding*****************/
@@ -172,6 +180,11 @@ div.limited-character.universal {
     padding-left: 0px !important;
     padding-right: 0px !important;
     padding-top: 11px !important;
+  }
+}
+.mat-form-field-flex-nopadding-bottom {
+  .mat-form-field-wrapper .mat-form-field-flex {
+    padding-bottom: 0px !important;
   }
 }
 
@@ -211,6 +224,14 @@ div.limited-character.universal {
     padding-left: 5px;
     padding-right: 5px;
   }
+}
+
+.higlight-input {
+  background-color: #e8e8e8;
+  border-radius: 2px;
+  padding-top: 10px;
+  margin-bottom: 5px;
+  padding-left: 5px;
 }
 
 /***************************************************************************************/
@@ -379,7 +400,7 @@ div.limited-character.universal {
   background: #ffffff;
   border: 1px solid #bbbbbb;
   margin-top: 0px;
-
+  border-radius: 10px;
   .tooltip-info-header,
   .tooltip-info-body span {
     padding: 0.5em;
@@ -388,8 +409,8 @@ div.limited-character.universal {
   .tooltip-info-header {
     background-color: #eeeeee;
     margin-right: 0px !important;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     border-bottom: 1px solid #bbbbbb;
   }
 
