--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -20,8 +20,8 @@
     padding-left: 48px;
   }
 
-  .bom-material-name-col {
-    padding-left: 24px;
+  .bom-select-checkbox-col {
+    width: 4%;
     .mat-checkbox-frame {
       border-color: rgb(255, 255, 255);
     }
