--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -401,6 +401,18 @@ tr.tbl-body-cols.mat-row {
   }
 }
 
+.text-ellipsis {
+  width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.mat-name-col{
+  display: flex;
+  align-items: center;
+}
+
 /** view bid page - view rating and supplier rates column distortion css fixes **/
 @media only screen and (max-width: 1332px){
   .view-bid-tbl{
@@ -431,19 +443,27 @@ tr.tbl-body-cols.mat-row {
     }
   }
 
-  .mat-header-cell:first-child, .material-details-row > .mat-cell:first-child, .supplier-details-row > .mat-cell:first-child{
+  .view-bids-tbl .mat-header-cell:first-child, 
+  .material-details-row > .mat-cell:first-child, 
+  .supplier-details-row > .mat-cell:first-child{
       min-width: 250px;
   }
 
-  .mat-header-cell:nth-child(2), .material-details-row > .mat-cell:nth-child(2), .supplier-details-row > .mat-cell:nth-child(2) {
+  .view-bids-tbl .mat-header-cell:nth-child(2), 
+  .material-details-row > .mat-cell:nth-child(2), 
+  .supplier-details-row > .mat-cell:nth-child(2) {
       min-width: 140px;
   }
 
-  .mat-header-cell:nth-child(3), .material-details-row > .mat-cell:nth-child(3), .supplier-details-row > .mat-cell:nth-child(3) {
+  .view-bids-tbl .mat-header-cell:nth-child(3), 
+  .material-details-row > .mat-cell:nth-child(3), 
+  .supplier-details-row > .mat-cell:nth-child(3) {
     min-width: 120px;
   }
 
-  .mat-header-cell:last-child, .material-details-row > .mat-cell:last-child, .supplier-details-row > .mat-cell:last-child {
+  .view-bids-tbl .mat-header-cell:last-child, 
+  .material-details-row > .mat-cell:last-child, 
+  .supplier-details-row > .mat-cell:last-child {
     min-width: 767px;
   }
 
@@ -494,7 +514,9 @@ tr.tbl-body-cols.mat-row {
 
 @media only screen and (max-width: 559px){
 
-  .mat-header-cell:nth-child(2), .material-details-row > .mat-cell:nth-child(2), .supplier-details-row > .mat-cell:nth-child(2) {
+  .view-bids-tbl .mat-header-cell:nth-child(2), 
+  .material-details-row > .mat-cell:nth-child(2), 
+  .supplier-details-row > .mat-cell:nth-child(2) {
       min-width: 100px;
   }
 
