--- a/src/app/features/dashboard/bom/bom-edit-material/bom-edit-materials.component.html
+++ b/src/app/features/dashboard/bom/bom-edit-material/bom-edit-materials.component.html
@@ -17,13 +17,13 @@
         <form [formGroup]="form">
           <table formArrayName="material" class="table mb-0 bg-white bom-material-table">
             <tr matSort class="mat-elevation-z2 mat-header-row background-color-skyblue">
-              <th class="mat-header-cell">Material Name</th>
-              <th class="mat-header-cell">Unit</th>
-              <th class="mat-header-cell">Estimated Quantity</th>
-              <th class="mat-header-cell">Estimated Rate</th>
+              <th class="mat-header-cell p-l-10">Material Name</th>
+              <th class="mat-header-cell p-l-10">Unit</th>
+              <th class="mat-header-cell p-l-10">Estimated Quantity</th>
+              <th class="mat-header-cell p-l-10">Estimated Rate</th>
             </tr>
             <tr *ngFor="let item of form['controls'].material['controls']; let i = index" [formGroupName]="i">
-              <td [ngClass]="isMobile ? 'font-size12' : '' ">
+              <td [ngClass]="isMobile ? 'font-size12 minwidth-250-px' : '' ">
                 {{ item.value.materialName }}
                 <div class="limited-character bom" matTooltip=" {{ item.value.materialGroup }}">
                   <span class="category-name">
@@ -42,29 +42,31 @@
                 </ng-container>
               </td>
               <td>
-                <mat-form-field class="border-input widthZero mat-form-field-padding bom-same-width-col p-t-10">
+                <mat-form-field
+                  class="border-input widthZero mat-form-field-padding bom-same-width-col p-t-10 maxwidth-150-px">
                   <mat-label>Estimated Quantity</mat-label>
-                  <input matInput type="number" formControlName="estimatedQty" [value]="item.estimatedQty"
-                    autocomplete="off" (input)="checkInput($event)">
+                  <input matInput type="text" formControlName="estimatedQty" [value]="item.estimatedQty"
+                    autocomplete="off" (input)="checkInput($event)" appTwoDigitDecimaNumber>
                 </mat-form-field>
                 <ng-container *ngIf="item.get('estimatedQty').errors !== null">
                   <mat-error class="fontsize-10-px" *ngIf="item.get('estimatedQty').hasError('min')">
                     It must be more than {{item.get('estimatedQty').errors.min.min}}
                   </mat-error>
                   <mat-error class="fontsize-10-px" *ngIf="item.get('estimatedQty').hasError('pattern')">
-                    Decimal valud is invalid
+                    Decimal value is invalid
                   </mat-error>
                 </ng-container>
               </td>
               <td>
-                <mat-form-field class="border-input widthZero mat-form-field-padding bom-same-width-col p-t-10">
+                <mat-form-field
+                  class="border-input widthZero mat-form-field-padding bom-same-width-col p-t-10 maxwidth-150-px">
                   <mat-label>Estimated Rate</mat-label>
-                  <input matInput type="number" formControlName="estimatedRate" [value]="item.estimatedRate"
-                    autocomplete="off" (input)="checkInput($event)">
+                  <input matInput type="text" formControlName="estimatedRate" [value]="item.estimatedRate"
+                    autocomplete="off" (input)="checkInput($event)" appTwoDigitDecimaNumber>
                 </mat-form-field>
                 <mat-error class="fontsize-10-px"
                   *ngIf="item.get('estimatedRate').errors !== null && item.get('estimatedRate').hasError('pattern')">
-                  Decimal valud is invalid
+                  Decimal value is invalid
                 </mat-error>
               </td>
             </tr>
