--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -29,33 +29,36 @@
           <div class="col-sm-6 col-xs-12">
             <span class="d-block text-semi-bold pt-1" [ngClass]="isMobile ? 'mb-2 font-size14' : 'mt-4 text-right' ">
               RFP Expiry
-              Date ::
-              {{ rfqSupplierDetailList.dueDate | date: "dd-MMM-yyy" }} </span>
+              Date :: {{ rfqSupplierDetailList.dueDate | date: "dd-MMM-yyy" }} </span>
           </div>
         </div>
 
-        <div class="material-rfq-supplies p-15 font-bold">
-          <span>
-            Payment Details :
-          </span>
-          <span
-            *ngIf="rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.otherDesc === null && rfqSupplierDetailList.terms.termsDesc != null"
-            class="p-l-20">
-            {{ rfqSupplierDetailList.terms.termsDesc }}
-          </span>
-          <span
-            *ngIf="rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.otherDesc != null"
-            class="p-l-20">
-            {{ rfqSupplierDetailList.terms.otherDesc }}
-          </span>
-          <span
-            *ngIf="rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.otherDesc === null && rfqSupplierDetailList.terms.termsDesc === null"
-            class="p-l-20">
-            -
-          </span>
+        <div class="material-rfq-supplies font-bold"
+          [ngClass]="isMobile ? 'display-inline-block m-b-10 width-100 p-10' : 'p-15' ">
+          <div [ngClass]="isMobile ? 'display-block' : '' ">
+            <span>
+              Payment Details :
+            </span>
+            <span
+              *ngIf="rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.otherDesc === null && rfqSupplierDetailList.terms.termsDesc != null"
+              class="p-l-20">
+              {{ rfqSupplierDetailList.terms.termsDesc }}
+            </span>
+            <span
+              *ngIf="rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.otherDesc != null"
+              class="p-l-20">
+              {{ rfqSupplierDetailList.terms.otherDesc }}
+            </span>
+            <span
+              *ngIf="rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.otherDesc === null && rfqSupplierDetailList.terms.termsDesc === null"
+              class="p-l-20">
+              -
+            </span>
+          </div>
+
 
           <ng-container *ngIf="rfqSupplierDetailList.isInternational === 1 && rfqSupplierDetailList.rfqCurrency">
-            <div class="float-right d-inline-block">
+            <div [ngClass]="isMobile ? 'display-block pull-left m-t-10' : 'float-right d-inline-block' ">
               <span class="base-currency border-dark"
                 [ngClass]="isMobile ? 'mcrncy font-size10 p-5' : 'p-l-1rem p-r-1rem p-t-10 p-b-10' ">
                 <span class="font-size-vary-grn color-grey">
@@ -80,7 +83,7 @@
           <table class="table rfq-bids-table" *ngFor="let projects of rfqSupplierDetailList.projectList">
             <!-- Project Name Header -->
             <tr class="blue-background-color color-white">
-              <th class="limited-character" [ngClass]="isMobile ? 'font-size14' : 'font-size18' ">
+              <th class="limited-character" [ngClass]="isMobile ? 'font-size14 display-block' : 'font-size18' ">
                 <span>
                   {{ projects.projectName }}
                 </span>
@@ -113,7 +116,8 @@
             <!-- Material Info -->
             <ng-container *ngFor="let material of projects.materialList">
               <tr matSort class="material-rfq-supplies">
-                <td class="limited-character p-t-1.5rem" [ngClass]="isMobile ? 'font-size12' : 'font-size14' ">
+                <td class="limited-character p-t-1.5rem"
+                  [ngClass]="isMobile ? 'font-size12 display-block' : 'font-size14' ">
                   <span>{{ material.materialName }}</span>
                   <!-- Upload Image Modal Link -->
                   <!-- <div class="add-edit-image d-block">
