--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -118,7 +118,7 @@
                 (click)="redirectToOpenIndentCount(projectDetails.projectId, projectDetails)"
                 matTooltip="View All Open Purchase Requisition"
                 [ngClass]="isMobile ? 'p-rem-r-5 height-auto minheight-58-px' : 'p-t-10 display-flex'">
-                <div class="fontsize-20-px text-bold card-counts" [ngClass]="isMobile ? 'width-100' : ''">
+                <div class="fontsize-20-px text-bold card-counts">
                   <span *ngIf="!projectDetails.openIndentCount"> 0 </span>
                   <span class="word-break-word" *ngIf="projectDetails.openIndentCount">
                     {{ projectDetails.openIndentCount }}
@@ -137,8 +137,7 @@
                 class="box-custom color-text-card cursor-pointer showOpenIndents material-details-box"
                 (click)="redirectToPurchaseOrder()" matTooltip="View All Purchase Orders"
                 [ngClass]="isMobile ? 'p-rem-r height-auto minheight-58-px' : 'p-t-10 display-flex'">
-                <div class="fontsize-20-px color-text-card text-bold card-counts"
-                  [ngClass]="isMobile ? 'width-55' : ''">
+                <div class="fontsize-20-px color-text-card text-bold card-counts">
                   <span *ngIf="projectDetails.purchaseOrderCount" class="maxwidth-96-px word-break-word">
                     {{ projectDetails.purchaseOrderCount }}
                   </span>
@@ -321,7 +320,7 @@
                 (click)="redirectToOpenIndentCount(projectDetails.projectId, projectDetails)"
                 matTooltip="View All Open Purchase Requisition"
                 [ngClass]="isMobile ? 'p-rem-r-5 height-auto minheight-58-px' : 'p-t-10 display-flex'">
-                <div class="fontsize-20-px text-bold card-counts" [ngClass]="isMobile ? 'width-100' : ''">
+                <div class="fontsize-20-px text-bold card-counts">
                   <span *ngIf="!projectDetails.openIndentCount"> 0 </span>
                   <span *ngIf="projectDetails.openIndentCount" class="word-break-word">
                     {{ projectDetails.openIndentCount }}
@@ -340,8 +339,7 @@
                 class="box-custom color-text-card cursor-pointer showOpenIndents material-details-box"
                 (click)="redirectToPurchaseOrder()" matTooltip="View All Purchase Orders"
                 [ngClass]="isMobile ? 'p-rem-r-5 height-auto minheight-58-px' : 'p-t-10 display-flex'">
-                <div class="fontsize-20-px color-text-card text-bold card-counts"
-                  [ngClass]="isMobile ? 'width-55' : ''">
+                <div class="fontsize-20-px color-text-card text-bold card-counts">
                   <span *ngIf="projectDetails.purchaseOrderCount" class="maxwidth-96-px word-break-word">
                     {{ projectDetails.purchaseOrderCount }}
                   </span>
